--- a/ESP8266/platformio.ini
+++ b/ESP8266/platformio.ini
@@ -12,6 +12,9 @@
 platform = espressif8266
 board = esp12e
 framework = arduino
+
+lib_deps = PubSubClient
+
 ; set frequency to 160MHz
 board_build.f_cpu = 80000000L
 ; set frequency to 80MHz
