--- a/ESP8266/platformio.ini
+++ b/ESP8266/platformio.ini
@@ -13,7 +13,7 @@ platform = espressif8266
 board = esp12e
 framework = arduino
 
-lib_deps = PubSubClient
+lib_deps = 89
 
 ; set frequency to 160MHz
 board_build.f_cpu = 80000000L
