--- a/ESP8266/platformio.ini
+++ b/ESP8266/platformio.ini
@@ -13,7 +13,7 @@ platform = espressif8266
 board = esp12e
 framework = arduino
 
-lib_deps = 89,31,19,1558,44,76,942
+lib_deps = 89, 31, 19, 1558, 44, 76, 942
 
 ; set frequency to 160MHz
 board_build.f_cpu = 80000000L
