--- a/Attiny/platformio.ini
+++ b/Attiny/platformio.ini
@@ -13,7 +13,8 @@ platform = atmelavr
 board = attiny13
 ; board = attiny85
 framework = arduino
-board_f_cpu = 1000000L
+# board_f_cpu = 1000000L
+board_build.f_cpu = 1000000L
 build_flags = --verbose
 
 ; usbtiny
