--- a/ESP8266/platformio.ini
+++ b/ESP8266/platformio.ini
@@ -21,5 +21,6 @@ board_build.f_cpu = 80000000L
 board_build.f_flash = 40000000L
 board_build.flash_mode = dio
 upload_resetmethod = ck
-build_flags = -Wl,-Teagle.flash.4m1m.ld
+build_flags = -Wl,-Teagle.flash.4m1m.ld --verbose
 upload_speed = 115200
+
