--- a/Attiny/platformio.ini
+++ b/Attiny/platformio.ini
@@ -8,14 +8,35 @@
 ; Please visit documentation for the other options and examples
 ; http://docs.platformio.org/page/projectconf.html
 
+[platformio]
+env_default = attiny13
+
+[common_env_data]
+
+
 [env:attiny85]
 platform = atmelavr
-board = attiny13
-; board = attiny85
+board = attiny85
 framework = arduino
-# board_f_cpu = 1000000L
 board_build.f_cpu = 1000000L
-build_flags = --verbose
+# build_flags = --verbose
+
+; usbtiny
+upload_protocol = usbtiny
+upload_flags = -e
+
+;Arduino as ISP
+; upload_protocol = stk500v1
+; upload_flags = -P$UPLOAD_PORT -b$UPLOAD_SPEED
+; upload_port = /dev/ttyACM0
+; upload_speed = 19200
+
+[env:attiny13]
+platform = atmelavr
+board = attiny13
+framework = arduino
+board_build.f_cpu = 1000000L
+# build_flags = --verbose
 
 ; usbtiny
 upload_protocol = usbtiny
