--- a/ESP8266_old/platformio.ini
+++ b/ESP8266_old/platformio.ini
@@ -16,11 +16,10 @@ framework = arduino
 lib_deps = 89, 31, 19, 1558, 44, 76, 942
 
 ; set frequency to 160MHz
-board_build.f_cpu = 80000000L
+;board_build.f_cpu = 80000000L
 ; set frequency to 80MHz
-board_build.f_flash = 40000000L
-board_build.flash_mode = dio
-upload_resetmethod = ck
-build_flags = -Wl,-Teagle.flash.4m1m.ld --verbose
-upload_speed = 115200
-
+;board_build.f_flash = 40000000L
+;board_build.flash_mode = dout
+;upload_resetmethod = ck
+;build_flags = -Wl,-Teagle.flash.4m1m.ld --verbose
+;upload_speed = 115200
